# adl_contract_admin

./: .gitignore  Dockerfile  README.md  create_dump.sh  docker-compose.yaml  fly.toml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/config/: config.py
app/pages/: extension.py
app/services/: d.py  data_processing.py  database_service.py  epv_calculations.py  ffscrapr.py  update_data.py
pages/: evp.py  home.py
services/: data_processing.py  database_service.py  epv_calculations.py  update_data.py
